# collector

./: Cargo.toml  README.md  bacon.toml  build.rs
examples/: test-hash-collision.rs
src/: api.rs  hash.rs  lib.rs
